--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+
+
 #content{
 	margin: auto;
     width: 70%;
@@ -5,8 +7,16 @@
 }
 
 
+/*  HEADER */
 
 
+/*  MIDDLE */
+
+
+
+
+
+/*  FOOTER */
 
 #footer {
     position: absolute;
