--- a/main.css
+++ b/main.css
@@ -83,14 +83,17 @@ ul{
 	text-align:center;
 }
 li{
+	width: 132px;
+	height: 40px;
+}
+a{
 
 	text-align: center;
 	vertical-align: middle;
 	line-height: 40px;     
 
 
-	width: 132px;
-	height: 40px;
+	
 	padding-left: 0px;
 	float: left;
 
@@ -126,7 +129,7 @@ a:hover{
 	#header-nav{
 		margin-bottom: 50px;
 	}
-	li{
+	a{
 		float: none;
 	}
 	.sLink{
