--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Roboto';
-    src: url('fonts/Roboto-regular.ttf');
+    src: url('fonts/Roboto-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
