--- a/main.css
+++ b/main.css
@@ -110,7 +110,7 @@ a{
 
 }
 
-a:hover{
+#header-nav a:hover{
         background-color: #000;
         color: #fff;
 }
@@ -346,37 +346,20 @@ a:hover{
 
 /* SOCIAL MEDIA*/
 
-.fa {
-  padding: 15px;
-  font-size: 25px;
-  height: 20px;
-  width: 20px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
-.fa:hover {
-    opacity: 0.7;
-}
 
 
 
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
+.fa-facebook{
+	width: 50px;
+	height: 50px;
 }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+.social a{
+	line-height: 25px; 
+	padding: 0px;
+	padding-left: 5px;
 }
-.fa-instagram {
-  background: #125688;
-  color: white;
+.social a:hover{
+        opacity: 0.5;
 }
 
-.fa-pinterest {
-  background: #cb2027;
-  color: white;
-}
